# rust_boppo_websocket

./: CHANGELOG.md  Cargo.toml  README.md  justfile
assets/: BoppoDeviceCA.crt
examples/: features.rs  simple.rs
src/: audio.rs  client.rs  commands.rs  error.rs  globals.rs  lib.rs
